# cohere

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.md  bld.bat  build.sh  install.bat  install.sh  meta.yaml  pyproject.toml  readthedocs.yaml  requirements.txt  setup.py  test_gui.ipynb  tst.py
beamlines/: preparer.py
cohere/: __init__.py
cohere/beamlines/: __init__.py  detector.py  diffractometer.py  viz.py
cohere/controller/: AI_guess.py  gen_rec.py  op_flow.py  params.py  phasing.py  rec.py  reconstruction.py  reconstruction_GA.py  reconstruction_common.py  reconstruction_multi.py  reconstruction_single.py
cohere/data/: __init__.py  alien_tools.py  standard_preprocess.py
cohere/include/: bridge.hpp  common.h  manager.hpp  parameters.hpp  pcdi.hpp  resolution.hpp  state.hpp  support.hpp  util.hpp  worker.hpp
cohere/lib/: aflib.py  cohlib.py  cplib.py  nplib.py
cohere/src_cpp/: bridge.cpp  manager.cpp  parameters.cpp  pcdi.cpp  resolution.cpp  state.cpp  support.cpp  util.cpp  worker.cpp
cohere/src_py/beamlines/: detector.py  diffractometer.py  preparer.py  spec.py  viz.py
cohere/src_py/controller/: fast_module.py  gen_rec.py  reconstruction.py  reconstruction_multi.py
cohere/src_py/cyth/: bridge_cpu.pyx  bridge_cpu.templ  bridge_cuda.pyx  bridge_cuda.templ  bridge_opencl.templ
cohere/src_py/utilities/: __init__.py  parse_ver.py  simple.py  transtest.py  utils.py  utils_ga.py  viz_util.py
cohere/utilities/: __init__.py  config_errors_dict.py  config_verifier.py  dvc_utils.py  utils.py  viz_util.py
cohere_core/: __init__.py
cohere_core/controller/: AI_guess.py  AI_guess_torch.py  __init__.py  features.py  mpi_cmd.py  op_flow.py  phasing.py  reconstruction_GA.py  reconstruction_GA_HPC.py  reconstruction_coupled.py  reconstruction_multi.py  reconstruction_populous_GA.py  reconstruction_single.py
cohere_core/data/: alien_tools.py  standard_preprocess.py
cohere_core/lib/: aflib.py  check_libs.py  cohlib.py  cplib.py  nplib.py  torchlib.py
cohere_core/utilities/: config_errors_dict.py  config_verifier.py  dvc_utils.py  ga_utils.py  host_utils.py  utils.py
conda/: meta.yaml
conf/: config  config_data  config_disp  config_prep  config_rec
controller/: gen_rec.py  params.py  reconstruction.py  reconstruction_multi.py
dev/linux/: build.sh  cohere_activate.sh  init.sh  meta.yaml  reccdi_activate.sh  reccdi_deactivate.sh  serena.sh  setenv.sh  setup.py  setup.templ
dev/mac/: build.sh  cohere_activate.sh  cohere_deactivate.sh  init.sh  meta.yaml  setenv.sh  setup.py  setup.templ
docs/: requirements.txt
docs/source/: about.rst  api_beamlines.rst  api_cohere_core.rst  api_cohere_ui.rst  api_phasing.rst  api_standard_preprocess.rst  api_utils.rst  cohere_experiment.rst  conf.py  config_data.rst  config_disp.rst  config_instr.rst  config_main.rst  config_mp.rst  config_prep.rst  config_rec.rst  configuration.rst  define_alg_seq.rst  experiment_space.rst  for_developers.rst  how_to_use.rst  index.rst  installation.rst
docs/source/core/: api_utils.rst  conf.py  index.rst
docs/source/html/: .buildinfo  about.html  api_phasing.html  api_standard_preprocess.html  api_utils.html  config_data.html  config_disp.html  config_main.html  config_prep.html  config_rec.html  configuration.html  experiment_space.html  for_developers.html  genindex.html  how_to_use.html  (+6 more)
jup_gui/: __init__.py  config.py  core.py  results.py  styles.py  widgets.py
jup_gui/features/: __init__.py  base.py  disp_features.py  rec_features.py
jup_gui/tabs/: __init__.py  base.py  data.py  disp.py  instr.py  prep.py  rec.py
lib/: aflib.py  cohlib.py
utilities/: dvc_utils.py
(+48 files in other folders)
